Allow controlling whether to fetch from remote in vendor.sh

--- a/vendor.ini
+++ b/vendor.ini
@@ -11,49 +11,49 @@
 
 # tpope's stuff
 
-link/.vim/bundle/vim-abolish		https://github.com/tpope/vim-abolish.git		master
-link/.vim/bundle/vim-characterize	https://github.com/tpope/vim-characterize.git	master
-link/.vim/bundle/vim-commentary		https://github.com/tpope/vim-commentary.git		master
-link/.vim/bundle/vim-obsession		https://github.com/tpope/vim-obsession.git		master
-link/.vim/bundle/vim-repeat			https://github.com/tpope/vim-repeat.git			master
-link/.vim/bundle/vim-sleuth			https://github.com/tpope/vim-sleuth.git			master
-link/.vim/bundle/vim-surround		https://github.com/tpope/vim-surround.git		master
+link/.vim/bundle/vim-abolish		https://github.com/tpope/vim-abolish.git		origin/master
+link/.vim/bundle/vim-characterize	https://github.com/tpope/vim-characterize.git	origin/master
+link/.vim/bundle/vim-commentary		https://github.com/tpope/vim-commentary.git		origin/master
+link/.vim/bundle/vim-obsession		https://github.com/tpope/vim-obsession.git		origin/master
+link/.vim/bundle/vim-repeat			https://github.com/tpope/vim-repeat.git			origin/master
+link/.vim/bundle/vim-sleuth			https://github.com/tpope/vim-sleuth.git			origin/master
+link/.vim/bundle/vim-surround		https://github.com/tpope/vim-surround.git		origin/master
 
 # Language-specific
 
-link/.vim/bundle/Dockerfile.vim				https://github.com/ekalinin/Dockerfile.vim.git			master
-link/.vim/bundle/puppet-syntax-vim			https://github.com/puppetlabs/puppet-syntax-vim.git		master
-link/.vim/bundle/rust.vim					https://github.com/wting/rust.vim.git					master
-link/.vim/bundle/typescript-vim				https://github.com/leafgarland/typescript-vim.git		master
-link/.vim/bundle/vim-coffee-script			https://github.com/kchmck/vim-coffee-script.git			master
-link/.vim/bundle/vim-css-color				https://github.com/ap/vim-css-color.git					master
-link/.vim/bundle/vim-eco					https://github.com/AndrewRadev/vim-eco.git				master
-link/.vim/bundle/vim-elixir					https://github.com/elixir-lang/vim-elixir.git			master
-link/.vim/bundle/vim-go						https://github.com/fatih/vim-go.git						master
-link/.vim/bundle/vim-grep-syntax			https://github.com/andrew-d/vim-grep-syntax.git			master
-link/.vim/bundle/vim-javascript				https://github.com/pangloss/vim-javascript.git			master
-link/.vim/bundle/vim-json					https://github.com/elzr/vim-json.git					master
-link/.vim/bundle/vim-jsx					https://github.com/mxw/vim-jsx.git						master
-link/.vim/bundle/vim-ledger					https://github.com/ledger/vim-ledger.git				master
-link/.vim/bundle/vim-markdown				https://github.com/tpope/vim-markdown.git				master
-link/.vim/bundle/vim-mustache-handlebars	https://github.com/mustache/vim-mustache-handlebars.git	master
-link/.vim/bundle/vim-python-pep8-indent		https://github.com/hynek/vim-python-pep8-indent.git		master
-link/.vim/bundle/vim-rubocop				https://github.com/ngmy/vim-rubocop.git					master
-link/.vim/bundle/vim-ruby					https://github.com/vim-ruby/vim-ruby.git				master
-link/.vim/bundle/vim-scala					https://github.com/derekwyatt/vim-scala.git				master
+link/.vim/bundle/Dockerfile.vim				https://github.com/ekalinin/Dockerfile.vim.git			origin/master
+link/.vim/bundle/puppet-syntax-vim			https://github.com/puppetlabs/puppet-syntax-vim.git		origin/master
+link/.vim/bundle/rust.vim					https://github.com/wting/rust.vim.git					origin/master
+link/.vim/bundle/typescript-vim				https://github.com/leafgarland/typescript-vim.git		origin/master
+link/.vim/bundle/vim-coffee-script			https://github.com/kchmck/vim-coffee-script.git			origin/master
+link/.vim/bundle/vim-css-color				https://github.com/ap/vim-css-color.git					origin/master
+link/.vim/bundle/vim-eco					https://github.com/AndrewRadev/vim-eco.git				origin/master
+link/.vim/bundle/vim-elixir					https://github.com/elixir-lang/vim-elixir.git			origin/master
+link/.vim/bundle/vim-go						https://github.com/fatih/vim-go.git						origin/master
+link/.vim/bundle/vim-grep-syntax			https://github.com/andrew-d/vim-grep-syntax.git			origin/master
+link/.vim/bundle/vim-javascript				https://github.com/pangloss/vim-javascript.git			origin/master
+link/.vim/bundle/vim-json					https://github.com/elzr/vim-json.git					origin/master
+link/.vim/bundle/vim-jsx					https://github.com/mxw/vim-jsx.git						origin/master
+link/.vim/bundle/vim-ledger					https://github.com/ledger/vim-ledger.git				origin/master
+link/.vim/bundle/vim-markdown				https://github.com/tpope/vim-markdown.git				origin/master
+link/.vim/bundle/vim-mustache-handlebars	https://github.com/mustache/vim-mustache-handlebars.git	origin/master
+link/.vim/bundle/vim-python-pep8-indent		https://github.com/hynek/vim-python-pep8-indent.git		origin/master
+link/.vim/bundle/vim-rubocop				https://github.com/ngmy/vim-rubocop.git					origin/master
+link/.vim/bundle/vim-ruby					https://github.com/vim-ruby/vim-ruby.git				origin/master
+link/.vim/bundle/vim-scala					https://github.com/derekwyatt/vim-scala.git				origin/master
 
 # Commonly-used plugins
 
-link/.vim/bundle/ack.vim			https://github.com/mileszs/ack.vim.git					master
-link/.vim/bundle/ctrlp.vim			https://github.com/kien/ctrlp.vim.git					master
-link/.vim/bundle/editorconfig-vim	https://github.com/editorconfig/editorconfig-vim.git	master
-link/.vim/bundle/tagbar				https://github.com/majutsushi/tagbar.git				master
-link/.vim/bundle/vim-airline		https://github.com/bling/vim-airline.git				master
-link/.vim/bundle/vim-auto-save		https://github.com/vim-scripts/vim-auto-save.git		master
-link/.vim/bundle/vim-gitgutter		https://github.com/airblade/vim-gitgutter.git			master
+link/.vim/bundle/ack.vim			https://github.com/mileszs/ack.vim.git					origin/master
+link/.vim/bundle/ctrlp.vim			https://github.com/kien/ctrlp.vim.git					origin/master
+link/.vim/bundle/editorconfig-vim	https://github.com/editorconfig/editorconfig-vim.git	origin/master
+link/.vim/bundle/tagbar				https://github.com/majutsushi/tagbar.git				origin/master
+link/.vim/bundle/vim-airline		https://github.com/bling/vim-airline.git				origin/master
+link/.vim/bundle/vim-auto-save		https://github.com/vim-scripts/vim-auto-save.git		origin/master
+link/.vim/bundle/vim-gitgutter		https://github.com/airblade/vim-gitgutter.git			origin/master
 
 # Color
 
-link/.vim/bundle/jellybeans.vim			https://github.com/nanotech/jellybeans.vim.git			master
-link/.vim/bundle/vim-colors-solarized	https://github.com/altercation/vim-colors-solarized.git	master
-link/.vim/bundle/vim-wombat256mod		https://github.com/michalbachowski/vim-wombat256mod.git	master
+link/.vim/bundle/jellybeans.vim			https://github.com/nanotech/jellybeans.vim.git			origin/master
+link/.vim/bundle/vim-colors-solarized	https://github.com/altercation/vim-colors-solarized.git	origin/master
+link/.vim/bundle/vim-wombat256mod		https://github.com/michalbachowski/vim-wombat256mod.git	origin/master
