Add vim-airline-themes repository

--- a/vendor.ini
+++ b/vendor.ini
@@ -55,5 +55,6 @@ link/.vim/bundle/vim-gitgutter		https://github.com/airblade/vim-gitgutter.git			
 # Color
 
 link/.vim/bundle/jellybeans.vim			https://github.com/nanotech/jellybeans.vim.git			origin/master
+link/.vim/bundle/vim-airline-themes		https://github.com/vim-airline/vim-airline-themes.git	origin/master
 link/.vim/bundle/vim-colors-solarized	https://github.com/altercation/vim-colors-solarized.git	origin/master
 link/.vim/bundle/vim-wombat256mod		https://github.com/michalbachowski/vim-wombat256mod.git	origin/master
