--- a/vendor.ini
+++ b/vendor.ini
@@ -34,6 +34,7 @@ link/.vim/bundle/vim-grep-syntax			https://github.com/andrew-d/vim-grep-syntax.g
 link/.vim/bundle/vim-javascript				https://github.com/pangloss/vim-javascript.git			origin/master
 link/.vim/bundle/vim-json					https://github.com/elzr/vim-json.git					origin/master
 link/.vim/bundle/vim-jsx					https://github.com/mxw/vim-jsx.git						origin/master
+link/.vim/bundle/vim-kotlin					https://github.com/udalov/kotlin-vim.git				origin/master
 link/.vim/bundle/vim-ledger					https://github.com/ledger/vim-ledger.git				origin/master
 link/.vim/bundle/vim-markdown				https://github.com/tpope/vim-markdown.git				origin/master
 link/.vim/bundle/vim-mustache-handlebars	https://github.com/mustache/vim-mustache-handlebars.git	origin/master
